# pwapp

./: README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/raheel/player/: MainActivity.java  Track.java  TrackAdapter.java
app/src/main/res/drawable/: circle_button_primary.xml  circle_button_secondary.xml  cover_border.xml  cover_gradient.xml
app/src/main/res/layout/: activity_main.xml  item_track.xml
app/src/main/res/values/: colors.xml  themes.xml
